--- a/index.html
+++ b/index.html
@@ -229,6 +229,8 @@
   </script>
   <!--! Final Script del sistema de partículas - Parte 2 de 2 -->
   
+  <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+  
 </body>
 
 </html>
