--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./css/style.css">
   <title>Samuel Bornacelly - Portafolio</title>
   <script src="./js/main.js" defer></script>
+  <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 
   <!--! Inicio Script del sistema de partículas - Parte 1 de 2 -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"
@@ -228,8 +229,6 @@
     })
   </script>
   <!--! Final Script del sistema de partículas - Parte 2 de 2 -->
-  
-  <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
   
 </body>
 
